# Quadruped-State-Estimation

./: README.md
aliengo_control/: CMakeLists.txt  package.xml
aliengo_control/include/aliengo_control/: aliengo_control.h  aliengo_low_level.h
aliengo_control/include/unitree_legged_sdk/: comm.h  udp.h
aliengo_control/src/: aliengo_control.cpp  aliengo_control_node.cpp  aliengo_low_level.cpp  aliengo_low_level_node.cpp
cheetah_msgs/: CMakeLists.txt
cheetah_msgs/msg/: ArmState.msg  JoyCmd.msg  LegContact.msg  LegsState.msg  MotorState.msg
devel/: .catkin  .rosinstall
devel/include/cheetah_msgs/: ArmState.h  FeetCmd.h  JoyCmd.h  LegContact.h  LegPrefix.h  LegsCmd.h  LegsState.h  MotorState.h
devel/lib/pkgconfig/: aliengo_control.pc  cheetah_msgs.pc  kf_estimator.pc  unitree_description.pc
devel/share/aliengo_control/cmake/: aliengo_controlConfig.cmake
devel/share/cheetah_msgs/cmake/: cheetah_msgs-msg-paths.cmake  cheetah_msgsConfig.cmake
devel/share/kf_estimator/cmake/: kf_estimatorConfig.cmake
devel/share/unitree_description/cmake/: unitree_descriptionConfig.cmake
kf_estimator/: CMakeLists.txt
kf_estimator/cfg/: rviz.rviz
kf_estimator/include/kf_estimator/: dog_type.h  kf_estimator.h  robot_math.h  state_estimate.h  terrain_estimator.h
kf_estimator/launch/: LegSlam_bringup.launch  rviz.launch
kf_estimator/src/: debug_test.cpp  kf_estimator.cpp  kf_estimator_node.cpp  state_estimate.cpp  terrain_estimator.cpp
unitree_description/urdf/aliengo/: const.xacro
