<?xml version="1.0"?>
<package format="2">
  <name>aliengo_control</name>
  <version>0.0.0</version>
  <description>The aliengo_control package</description>

  <maintainer email="skywoodsz@todo.todo">skywoodsz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>realtime_tools</depend>>
  <depend>tf2_ros</depend>
  <depend>cheetah_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
